# mtd-michif

./: .eslintrc.json  .gitignore  LICENSE  README.md  angular.json  build.sh  deploy-public.sh  deploy.sh  package-lock.json  package.json  pyproject.toml  server.js  tsconfig.json
.github/workflows/: blank.yml  michif_web_cicd.yml  test.yaml
config/: config.json  manifest_json.json
mtd_michif/: __about__.py  __init__.py  add_clarifications.py  bad_annotations_to_elan.py  compress_elan_audio.py  create_channel_mapping.py  create_file_mapping.py  create_session_mapping.py  dictionary.py  elan.py  elan_to_json.py  export_csv.py  extract_examples.py  force_align.py  language_id.py  parse_entries.py  problem_annotations_to_elan.py  read_metadata.py  textnorm.py  tmd_stats.py  types.py
mtd_michif/models/: eng-crg-text.overrides.json  ocr-hyphenation.json  uncorrectables.json
projects/mtd/: .browserslistrc  .eslintrc.json  karma.conf.js  ngsw-config.json
projects/mtd/src/: index.html  manifest.webmanifest  robots.txt  sitemap.xml  styles-app-loading.scss  styles-reset.scss  styles-reset.scss-theme.scss  styles-variables.scss  styles.scss
projects/mtd/src/app/: app-routing.module.ts
projects/mtd/src/app/app/: app.component.html  app.component.scss  app.component.scss-theme.scss  app.component.spec.ts  app.component.ts
projects/mtd/src/app/core/: core.module.ts  core.state.ts
projects/mtd/src/app/core/google-analytics/: google-analytics.effects.spec.ts
projects/mtd/src/app/core/mtd/: mtd.service.spec.ts  mtd.service.ts
projects/mtd/src/app/core/settings/: settings.effects.spec.ts  settings.reducer.ts
projects/mtd/src/app/pages/about/: about.component.html
projects/mtd/src/app/pages/bookmarks/: bookmarks.module.ts
projects/mtd/src/app/pages/browse/: browse-routing.module.ts  browse.component.ts  browse.module.ts
projects/mtd/src/app/pages/construction/: construction-routing.module.ts  construction.module.ts
projects/mtd/src/app/pages/introduction/: introduction.component.html  introduction.component.scss  introduction.component.ts
projects/mtd/src/app/pages/people/: people-routing.module.ts  people.module.ts
projects/mtd/src/app/pages/random/: random.component.scss  random.component.ts
projects/mtd/src/app/pages/search/: search.component.ts
projects/mtd/src/app/pages/settings/: settings-container.component.spec.ts
projects/mtd/src/app/pages/speakers/: speakers-routing.module.ts  speakers.component.html  speakers.component.ts  speakers.module.ts
projects/mtd/src/app/shared/: shared.module.ts
projects/mtd/src/app/shared/entry-list/: entry-list.component.html  entry-list.component.scss  entry-list.component.scss-theme.scss  entry-list.component.spec.ts  entry-list.component.ts
projects/mtd/src/app/shared/pronunciation-guide/: pronunciation-guide.component.html  pronunciation-guide.component.scss  pronunciation-guide.component.spec.ts  pronunciation-guide.component.ts
projects/mtd/src/app/shared/report-dialog/: report-dialog.component.html  report-dialog.component.spec.ts  report-dialog.component.ts
projects/mtd/src/assets/: frontmatter.html  introduction.html  pronunciation.html  report.php
projects/mtd/src/assets/i18n/: en.json
projects/mtd/src/assets/js/: config-michif.js  config.js  deadSearch.js  dict_cached-michif.js  editDistance.js  mtd-ui.min.js  mtd.js
projects/mtd/src/config/: config.ts
projects/mtd/src/environments/: environment.prod.ts  environment.test.ts  environment.ts
projects/mtd/src/themes/: black-theme.scss  default-theme.scss  light-theme.scss  nature-theme.scss
projects/server/: server.js
tests/: test_dictionary.py
transducers/: michif-approx.csv  michif-approx.yaml
(+63 files in other folders)
